--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -64,6 +64,9 @@ jobs:
       - name: "Run ergebnis/composer-normalize"
         run: "composer normalize --dry-run"
 
+      - name: "Run symplify/config-transformer"
+        run: "vendor/bin/config-transformer switch-format config/ --target-symfony-version 5.3 --dry-run"
+
       - name: "Create cache directory for squizlabs/php_codesniffer"
         run: "mkdir -p .build/php_codesniffer"
 
