--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.editorconfig                  export-ignore
 /.gitattributes                 export-ignore
 /.gitignore                     export-ignore
+/..yamllint.yaml                export-ignore
 /composer-require-checker.json  export-ignore
 /composer.lock                  export-ignore
 /infection.json.dist            export-ignore
@@ -13,3 +14,4 @@
 /phpstan-baseline.neon          export-ignore
 /psalm.xml                      export-ignore
 /psalm-baseline.xml             export-ignore
+/update-license.php             export-ignore
