--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": "^8.0.0",
+    "php": ">=8.0.0 <8.2.0",
     "nikic/php-parser": "^4.13.0",
     "nyholm/sunflower": "^0.2.1",
     "ondrejmirtes/better-reflection": "^4.3.70",
