feat(composer): Allow ergebnis/composer-normalize to run as plugin

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
     "vimeo/psalm": "^4.18"
   },
   "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true
+    },
     "preferred-install": "dist",
     "sort-packages": true
   },
