--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,11 @@
   },
   "config": {
     "allow-plugins": {
-      "ergebnis/composer-normalize": true
+      "composer/package-versions-deprecated": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "ergebnis/composer-normalize": true,
+      "phpstan/extension-installer": true,
+      "symfony/runtime": true
     },
     "preferred-install": "dist",
     "sort-packages": true
