--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "source": "https://github.com/Lctrs/php-ext-stubs-generator"
   },
   "require": {
-    "php": ">=8.0.0 <8.2.0",
+    "php": ">=8.0.12 <8.2.0",
     "nikic/php-parser": "^4.13.2",
     "nyholm/sunflower": "^0.2.1",
-    "ondrejmirtes/better-reflection": "^4.3.81",
+    "roave/better-reflection": "^5.0.3",
     "symfony/console": "^5.4.2",
     "symfony/runtime": "^5.4.1",
     "thecodingmachine/safe": "^1.3.3"
@@ -40,8 +40,6 @@
     "thecodingmachine/phpstan-safe-rule": "^1.1.0",
     "vimeo/psalm": "^4.18"
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Lctrs\\PhpExtStubsGenerator\\": "src/"
