feat(dependabot): update directs and indirects dependencies

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,13 +3,14 @@
 version: 2
 
 updates:
-  - commit-message:
+  - allow:
+      - dependency-type: "all"
+    commit-message:
       include: "scope"
       prefix: "tools"
     directory: "/.tools/composer-require-checker"
     labels:
       - "dependency"
-    open-pull-requests-limit: 10
     package-ecosystem: "composer"
     schedule:
       interval: "daily"
@@ -28,16 +29,13 @@ updates:
     versioning-strategy: "increase"
 
   - allow:
-      - dependency-name: "slevomat/coding-standard"
-      - dependency-name: "squizlabs/php_codesniffer"
-      - dependency-type: "direct"
+      - dependency-type: "all"
     commit-message:
       include: "scope"
       prefix: "composer"
     directory: "/"
     labels:
       - "dependency"
-    open-pull-requests-limit: 10
     package-ecosystem: "composer"
     schedule:
       interval: "daily"
@@ -49,7 +47,6 @@ updates:
     directory: "/"
     labels:
       - "dependency"
-    open-pull-requests-limit: 10
     package-ecosystem: "github-actions"
     schedule:
       interval: "daily"
