--- a/composer.json
+++ b/composer.json
@@ -24,21 +24,21 @@
     "thecodingmachine/safe": "^1.3.3"
   },
   "require-dev": {
-    "doctrine/coding-standard": "^9.0.0",
-    "ergebnis/composer-normalize": "^2.26.0",
-    "ergebnis/license": "^1.2.0",
-    "phpstan/extension-installer": "^1.1.0",
-    "phpstan/phpstan": "^1.6.2",
-    "phpstan/phpstan-deprecation-rules": "^1.0.0",
-    "phpstan/phpstan-phpunit": "^1.1.1",
-    "phpstan/phpstan-strict-rules": "^1.2.2",
-    "phpstan/phpstan-symfony": "^1.1.8",
-    "phpunit/phpunit": "^9.5.20",
-    "psalm/plugin-phpunit": "^0.16.1",
-    "psalm/plugin-symfony": "^3.1.4",
-    "symplify/config-transformer": "^10.2.2",
-    "thecodingmachine/phpstan-safe-rule": "^1.2.0",
-    "vimeo/psalm": "^4.23"
+    "doctrine/coding-standard": "9.0.0",
+    "ergebnis/composer-normalize": "2.26.0",
+    "ergebnis/license": "1.2.0",
+    "phpstan/extension-installer": "1.1.0",
+    "phpstan/phpstan": "1.6.3",
+    "phpstan/phpstan-deprecation-rules": "1.0.0",
+    "phpstan/phpstan-phpunit": "1.1.1",
+    "phpstan/phpstan-strict-rules": "1.2.2",
+    "phpstan/phpstan-symfony": "1.1.8",
+    "phpunit/phpunit": "9.5.20",
+    "psalm/plugin-phpunit": "0.16.1",
+    "psalm/plugin-symfony": "3.1.4",
+    "symplify/config-transformer": "10.2.2",
+    "thecodingmachine/phpstan-safe-rule": "1.2.0",
+    "vimeo/psalm": "4.23"
   },
   "autoload": {
     "psr-4": {
