--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Generate stubs for any PHP extension.",
   "license": "MIT",
   "type": "library",
+  "abandoned": true,
   "authors": [
     {
       "name": "Jérôme Parmentier",
